fixed issues with isMinimized and with iconBoxs being too big.

--- a/src/client/views/nodes/PDFBox.scss
+++ b/src/client/views/nodes/PDFBox.scss
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100%;
     background: lightslategray;
-    .pdfBox-title-cont {
+    .pdfBox-title-cont, .pdfBox-cont-interactive{
         width: 150%;
         height: 100%;
         position: relative;
